--- a/CodeWars/CodeWars/CodeWars.csproj
+++ b/CodeWars/CodeWars/CodeWars.csproj
@@ -47,6 +47,7 @@
     <Compile Include="FindTheOddInt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShuffledArray.cs" />
+    <Compile Include="SimpleEncryption.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
