--- a/CodeWars/CodeWars/CodeWars.csproj
+++ b/CodeWars/CodeWars/CodeWars.csproj
@@ -48,9 +48,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShuffledArray.cs" />
     <Compile Include="SimpleEncryption.cs" />
+    <Compile Include="YourOrderPlease.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
